# Tatou

./: .env  .gitignore  README.md  docker-compose.yml  migration_unique_username.sql
db/: tatou.sql
server/: API.md  Dockerfile  fauttokens.py  pyproject.toml
server/fuzzing/: fuzzer_config.yaml  regression_helpers.py
server/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_add_after_eof_py.html  z_145eef247bfb46b6_fatinWM_py.html  z_145eef247bfb46b6_flag_detection_py.html  z_145eef247bfb46b6_server_py.html  z_145eef247bfb46b6_watermarking_cli_py.html  z_145eef247bfb46b6_watermarking_method_py.html  z_145eef247bfb46b6_watermarking_utils_py.html
server/src/: AdnasWM.py  PDFishAndChipsStamp.py  fatinWM.py  flag_detection.py  server.py  watermarking_utils.py
server/src/Tatou_Server.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/src/keys/: server_priv.asc  server_pub.asc  test.asc
server/src/keys/clients/: Group_01.asc  server_pub.asc
server/src/static/: documents.html  index.html  login.html  signup.html  style.css
server/test/: conftest.py  test_api_happy_path.py  test_auth.py  test_documents_extra.py  test_fatinwm.py  test_flag_detection.py  test_fuzz_api.py  test_regression_helpers.py  test_rmap_plugins.py  test_server_db_helpers.py  test_server_extra_routes.py  test_server_misc_routes.py  test_server_more_routes.py  test_watermarking_cli.py  test_watermarking_methods.py  test_watermarking_utils.py
server/test/Integration/: test_api.py  test_api_basics.py  test_api_happy_path.py  test_public_endpoints.py  test_random.py  test_regressions.py  test_rmap_endpoints.py  test_rmap_exploits.py  test_rmap_more_coverage.py  test_rmap_security.py  test_upload_basic.py  test_upload_document_pdfcheck.py  test_upload_validation.py  test_watermark_flow.py
server/test/Security/: test_auth.py  test_bad_tokens.py  test_security_authorization.py  test_static_security.py
