[project]
name = "Tatou-Server"
version = "0.0.1"
description = "PDF Watermarking platform"
requires-python = ">=3.11"
dependencies = [
	"PyMuPDF>=1.21.1",
	"Flask==3.0.3",
	"gunicorn==21.2.0",
	"PyMySQL==1.1.2",
	"SQLAlchemy==2.0.43",
	"dill==0.4.0",
	"rmap @ git+https://github.com/nharrand/RMAP-Server.git@v1.0.0", #added for end of phase update/Sandra
	"Flask-Limiter>=3.0.0", # added this one for the brute-force thing/S
	"cryptography>=41.0.0", #added this for my WM method /Sandra
	"pikepdf>=8,<11", #added for my WM method nr2/Sandra
	"pypdf>=4.0.0", #added for my WM method/Adna
  	"cryptography>=42.0.0", #added for my WM method /Adna
	"python-json-logger==2.0.7" #added for logging /Sandra

]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["test/"]
python_files = ["test_*.py"]

[project.scripts]
pdfwm = "watermarking_cli:main"                 # now you can run `pdfwm methods`
