[project]
name = "Tatou-Server"
version = "0.0.1"
description = "PDF Watermarking platform"
requires-python = ">=3.11"
dependencies = [
	"PyMuPDF>=1.21.1",
	"Flask==3.0.3",
	"gunicorn==21.2.0",
	"PyMySQL==1.1.2",
	"SQLAlchemy==2.0.43",
	"dill==0.4.0",
	"rmap @https://github.com/nharrand/RMAP-Server/releases/download/v2.0.0/rmap-2.0.0-py3-none-any.whl", # correct version added
	"Flask-Limiter>=3.0.0", # added this one for the brute-force thing/
	"cryptography>=41.0.0", #added this for my WM method /
	"pikepdf>=8,<11", #added for my WM method nr2/
	"pypdf>=4.0.0", #added for my WM method/
  	"cryptography>=42.0.0", #added for my WM method /
	"python-json-logger==2.0.7", #added for logging /
	"pytest-timeout>=2.3.1"

]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
	"pytest-cov>=4.1"
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing -q"
testpaths = ["test/"]
python_files = ["test_*.py"]

python_files = ["test_*.py"]

[project.scripts]
pdfwm = "watermarking_cli:main"                 # now you can run `pdfwm methods`
